Test Tags List fixed heigh, with graceful overflow scroll

--- a/webui/client/public/stylesheet.css
+++ b/webui/client/public/stylesheet.css
@@ -48,6 +48,52 @@ body {
   font-variant: small-caps;
 }
 
+/**
+ * Scrolling shadows by @kizmarh and @leaverou
+ * Degrades gracefully if yr using a pre-2010 browser.
+ */
+
+.scrollbox {
+	overflow: hidden;
+	width: auto;
+	max-height: 200px;
+	margin: 50px auto;
+
+	background:
+		/* Shadow covers */
+		linear-gradient(white 30%, rgba(255,255,255,0)),
+		linear-gradient(rgba(255,255,255,0), white 70%) 0 100%,
+
+		/* Shadows */
+		radial-gradient(50% 0, farthest-side, rgba(0,0,0,.2), rgba(0,0,0,0)),
+		radial-gradient(50% 100%,farthest-side, rgba(0,0,0,.2), rgba(0,0,0,0)) 0 100%;
+	background:
+		/* Shadow covers */
+		linear-gradient(white 30%, rgba(255,255,255,0)),
+		linear-gradient(rgba(255,255,255,0), white 70%) 0 100%,
+
+		/* Shadows */
+		radial-gradient(farthest-side at 50% 0, rgba(0,0,0,.2), rgba(0,0,0,0)),
+		radial-gradient(farthest-side at 50% 100%, rgba(0,0,0,.2), rgba(0,0,0,0)) 0 100%;
+	background-repeat: no-repeat;
+	background-color: white;
+	background-size: 100% 40px, 100% 40px, 100% 14px, 100% 14px;
+
+	/* Opera doesn't support this in the shorthand */
+	background-attachment: local, local, scroll, scroll;
+}
+
+.scrollbox:hover {
+  overflow: auto;
+}
+
+.scrollbox ul{
+  padding-right: 20px;
+}
+
+.scrollbox:hover ul {
+  padding-right: 0;
+}
 .but-no-style {
   border: none !important;
   background: none !important;
@@ -2832,3 +2878,5 @@ body {
   font-weight: 100;
   src: local("IBM Plex Serif Thin Italic"), local("IBMPlexSerif-ThinItalic"), url("./fonts/IBM-Plex/IBM-Plex-Serif/fonts/split/woff2/IBMPlexSerif-ThinItalic-Latin1.woff2") format("woff2");
   unicode-range: U+0000, U+000D, U+0020-007E, U+00A0-00A3, U+00A4-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2013-2014, U+2018-201A, U+201C-201E, U+2020-2022, U+2026, U+2030, U+2039-203A, U+2044, U+2074, U+20AC, U+2122, U+2212, U+FB01-FB02; }
+
+gg
